codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_one_pending_steer.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 48, height: 2 },
    content: [
        "• 下次工具调用后提交的消息（按 esc 中断并发送） ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (36, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " ")]
        "  ↳ Please continue.                            ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 36, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 38, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 44, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
