codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__pending_input_preview__tests__render_pending_steers_above_queued_messages.snap
---
source: tui/src/bottom_pane/pending_input_preview.rs
expression: "format!(\"{buf:?}\")"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 52, height: 11 },
    content: [
        "• 下次工具调用后将提交的消息（按 esc 可中断并立即发 ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " "), (29, " "), (31, " "), (38, " "), (40, " "), (42, " "), (44, " "), (46, " "), (48, " "), (50, " ")]
        "  送）                                              ", // hidden by multi-width symbols: [(3, " "), (5, " ")]
        "  ↳ Please continue.                                ",
        "  ↳ Check the last command output.                  ",
        "                                                    ",
        "• 本轮结束后将提交的消息                            ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " ")]
        "  ↳ Rejected steer that will be retried.            ",
        "                                                    ",
        "• 已排队的后续消息                                  ", // hidden by multi-width symbols: [(3, " "), (5, " "), (7, " "), (9, " "), (11, " "), (13, " "), (15, " "), (17, " ")]
        "  ↳ Queued follow-up question                       ",
        "    ⌥ + ↑ 编辑上一条排队消息                        ", // hidden by multi-width symbols: [(11, " "), (13, " "), (15, " "), (17, " "), (19, " "), (21, " "), (23, " "), (25, " "), (27, " ")]
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 29, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 30, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 31, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 38, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 39, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 41, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 42, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 44, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 46, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 47, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 48, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 49, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 50, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 3, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 4, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 5, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 34, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 40, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 2, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM | ITALIC,
        x: 29, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 11, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 13, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 14, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 15, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 17, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 18, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 19, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 20, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 21, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 23, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 25, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 27, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
